--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cloudinary": "^1.32.0",
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
+    "sequelize": "^6.27.0",
     "streamifier": "^0.1.1",
     "strip-js": "^1.2.0"
   }
